--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -1,37 +1,20 @@
-{% include "base.html"%}
-<div class="container" >
-    <div class="row">
-        <div class="col-4">
-            <a class="navbar-brand" href="/" style="color: rgb(130, 132, 135); margin-bottom:10px;" ><h1><b>CMS</b></h1></a>
-        </div>
-
-        <div class="col-8 text-right">
-        </div>
-    </div>
-    <form method="post" class="post-form" action="{% url 'common:login' %}">
+{% include "base.html" %}
+{% block content %}
+<div class="container my-3">
+    <form method="post" action="{% url 'common:login' %}">
         {% csrf_token %}
-        <input type="hidden" name="next" value="{{ next }}"> 
-         <!-- 로그인 성공후 이동되는 URL -->
-        <div class="form">
-        <div class="form-group">
+        {% include "form_errors.html" %}
+        <div class="mb-3">
             <label for="username">사용자ID</label>
-            <input type="text" class="form-control" name="username" id="username">
+            <input type="text" class="form-control" name="username" id="username"
+                   value="{{ form.username.value|default_if_none:'' }}">
         </div>
-        <div class="form-group">
+        <div class="mb-3">
             <label for="password">비밀번호</label>
-            <input type="password" class="form-control" name="password" id="password">
+            <input type="password" class="form-control" name="password" id="password"
+                   value="{{ form.password.value|default_if_none:'' }}">
         </div>
-        <button type="submit" class="btn btn-primary" >로그인</button>
-    </div>
+        <button type="submit" class="btn btn-primary">로그인</button>
     </form>
 </div>
-<style>
-    .container{
-        padding-top:100px;
-        width: 500px;
-    }
-    .form{
-        margin-top: 20px;
-
-    }
-</style>
+{% endblock %}
