--- a/templates/commute/commute_home.html
+++ b/templates/commute/commute_home.html
@@ -128,6 +128,7 @@
                                 <th>No</th>
                                 <th>이름</th>
                                 <th>부서</th>
+                                <th>구분</th>
                                 <th>출/퇴근시간</th>
                                 <th>비고</th>
                             </tr>
@@ -138,6 +139,7 @@
                                 <td class="number" style="cursor:hand;">{{ forloop.counter  }}</td>
                                 <td style="cursor:hand;">{{ commute.user.username }}</td>
                                 <td style="cursor:hand;">{{ commute.user.user_department }}</td>
+                                <td style="cursor:hand;">{{ commute.get_commute_category_display }}</td>
                                 <td style="cursor:hand;">{{ commute.commute_date|date:'Y-m-d H:i:s' }}</td>
                                 <td style="cursor:hand;">{{ commute.commute_reason }}</td>
                             </tr>
