--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,8 @@
 <body>
     <!-- 기본 템플릿 안에 삽입될 내용 Start -->
     <h1>메인이야 메인이야 메인</h1>
-    <a href="/commute/home" onclick="location.href='commute_home.html'" class="btn btn-info">출근 페이지</a>
-    {% block content %}
-    {% endblock %}
+    <a href="/commute/home" onclick="location.href='commute_home.html'" class="btn btn-secondary">출근 페이지</a>
+
     <!-- 기본 템플릿 안에 삽입될 내용 End -->
 </body>
 
