--- a/templates/commute/commute_home.html
+++ b/templates/commute/commute_home.html
@@ -139,7 +139,7 @@
                             <tr>
                                 <td class="number" style="cursor:hand;">{{ forloop.counter  }}</td>
                                 <td style="cursor:hand;">{{ commute.user.username }}</td>
-                                <td style="cursor:hand;">{{ commute.user.user_department }}</td>
+                                <td style="cursor:hand;">{{ commute.user.department }}</td>
                                 <td style="cursor:hand;">{{ commute.get_commute_category_display }}</td>
                                 <td style="cursor:hand;">{{ commute.commute_date|date:'Y-m-d H:i:s' }}</td>
                                 <td style="cursor:hand;">{{ commute.commute_reason }}</td>
