--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <body>
 
     <div class="mem-profile">
-        <img width="150" height="200" src="../static/img/account.png">
+        <img width="150" height="200" src="../static/img/hi.png">
 
             <div style="color:#0f4e78; font-size: 23px;">{{user.username}}님</div>
             <div style="color:#757575;">{{user.user_department}}</div>
