--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     
 
     <!--css-->
-    <link rel="stylesheet" href="{% static 'document/css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
