--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,11 +11,18 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb- mb-lg-0">
                     <li class="nav-item">
+                        <!-- 로그인 되어있는 경우 넵바 -->
                         {% if user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
+                        <div class="header-item header-text">
+                            <h4><a href="{% url 'board:Viewboard' %}">자료실</a></h4>
+                        </div>
+                        <div class="header-item header-text">
+                            <h4><a href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a></h4>
+                        </div>
                     {% else %}
+                        <!-- 아닐 경우 넵바 -->
                         <a class="nav-link" href="/common/login">로그인</a>
                         {% endif %}
                     </li>
