--- a/templates/board/Boarddetail.html
+++ b/templates/board/Boarddetail.html
@@ -17,9 +17,10 @@
     .content span{
         display: inline-block;
         margin-left:30px;
+        
     }
     #b-info .info-val{
-        color:#b2b2a2;
+        color:#8f8f89;
     }
 
     #list-btn{
@@ -43,6 +44,11 @@
 
     h3{
         margin-left:30px;
+    }
+    .depth{
+        background-color: rgb(255, 255, 255); 
+        padding-right: 20px;
+        font-size: 30px;
     }
 
     @media(max-width:500px){
@@ -89,7 +95,15 @@
         }
     }
 </style>
-    <div class="content">
+<body>
+<div class="box">
+    <div class="content" style="padding-top:80px; ">
+        <h1>자료실</h1>
+        <div class="depth">
+            <span>HOME</span>
+            <span>&gt;</span>
+            <span style="color: rgb(12,92,161);">자료실</span>
+            </div>
         <hr style="border:2px solid #555555;">
         <!--title-->
         <h3>{{de.board_title}}</h3>
@@ -159,6 +173,9 @@
         </div>
         <hr style="border-color:#bfbfbf;">
     </div>
+    
+</body>
+
     <script>
         function modify_and_delete(type,pk){
             //수정
