--- a/templates/board/Viewboard.html
+++ b/templates/board/Viewboard.html
@@ -14,6 +14,12 @@
     <!--외부 css 파일-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/side-bar.css' %}" />
     <style>
+        .depth{
+        background-color: rgb(255, 255, 255); 
+        padding-right: 20px;
+        font-size: 30px;
+    }
+
         @media(max-width:500px){
             .nav{
             float:none;
@@ -58,6 +64,11 @@
 
         <div class="content">
             <h1>자료실</h1>
+            <div class="depth">
+                <span>HOME</span>
+                <span>&gt;</span>
+                <span style="color: rgb(12,92,161);">자료실</span>
+                </div>
             {% block board %}
             <table class="table table-hover table-bordered">
                 <thead>
