--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,9 @@
     <!-- 네비게이션바 -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'cms:index' %}">CMS</a>
+            <a href="/">
+                <img width="100" height="80" src="/static/img/logo.png">
+            </a>
             <button class="navbar-toggler" type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent"
