--- a/templates/index.html
+++ b/templates/index.html
@@ -14,18 +14,29 @@
       margin: 40px auto;
       margin-top: -300px;
     }
+    
+    .user-name{
+      width: 200px;
+    }
+
+    .user_department{
+      width: 200px;
+    }
+
+    .pages{
+      width: 200px;
+    }
+
   </style>
 <body>
     <div class="mem-profile">
-        <h1></h1>
         <img width="200" height="200" src="{{ request.user.profile.photo.url }}" >
-        <!-- <img src="../static/img/ljg.png"> -->
-            <div style="color:#0f4e78; font-size: 23px;">{{request.user.username}}님</div>
-            <div style="color:#757575;">{{request.user.profile.user_department}}</div>
-
-        <a href="/commute/home" onclick="location.href='commute_home.html'" class="btn btn-secondary">출근 페이지</a>
-        
-        <a href="/document" onclick="location.href='commute_home.html'" class="btn btn-secondary">업무보고 페이지</a>
+            <div class="user-name" style="color:#0f4e78; font-size: 30px;">{{request.user.username}}님</div>
+            <div class="user_department" style="color:#000000; font-size: large;">{{request.user.profile.user_department}}</div>
+            <div class="pages">
+              <a href="/commute/home" onclick="location.href='commute_home.html'" class="btn btn-secondary" style="width:200px;">출근 페이지</a>
+              <a href="/document" onclick="location.href='commute_home.html'" class="btn btn-secondary" style="margin-top: 10px; width:200px; ">업무보고 페이지</a>
+            </div>
     </div>
 
     <div id='calendar-container'>
