--- a/document/templates/document/dailyReport/read.html
+++ b/document/templates/document/dailyReport/read.html
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div class="content-header">
-                <p>건의사항</p>
+                <p>기타</p>
             </div>
             <div class='col-sm-12'>
                 <div>
@@ -156,7 +156,7 @@
                             </tr>
                             {% endfor %}
                             {% else %}
-                            <td colspan="2">문제점 및 건의사항이 없습니다.</td>
+                            <td colspan="2">기타 사항이 없습니다.</td>
                             {% endif %}
                         </tbody>
                     </table>
