--- a/templates/board/Boarddetail.html
+++ b/templates/board/Boarddetail.html
@@ -90,6 +90,7 @@
     }
 </style>
     <div class="content">
+        <h1>자료실</h1>
         <hr style="border:2px solid #555555;">
         <!--title-->
         <h3>{{de.board_title}}</h3>
