--- a/templates/notice/post_list.html
+++ b/templates/notice/post_list.html
@@ -21,7 +21,7 @@
             {% if post_list %}
             {% for notice in post_list %}
             <tr>
-                <td>{{ forloop.counter }}</td>
+                <td>{{ forloop.revcounter }}</td>
                 <td>
                     <a href="{% url 'notice:detail' notice.id %}">{{ notice.title }}</a>
                 </td>
