--- a/templates/qna/question_detail.html
+++ b/templates/qna/question_detail.html
@@ -40,11 +40,10 @@
     </div>
 
     <!-- 답변 -->
-    <!-- <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다.</h5> -->
+    <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이 있습니다.</h5>
     {% for answer in question.answer_set.all %}
-    
-        <div class="media mb-4">
-            <div class="media-body" style="white-space: pre-line;">{{ answer.content }}</div>
+        <div class="media mb-4" style="border-style: solid !important; border-radius: 4px; border: 1px; border-color: rgb(158, 158, 158);">
+            <div class="media-body">{{ answer.content }}</div>
             <div class="d-flex justify-content-end">
                 {% if answer.modify_date %}
             <div class="badge bg-light text-dark p-2 text-start mx-3">
